--- a/requirements.txt
+++ b/requirements.txt
@@ -1,3 +1,18 @@
-pyrogram==2.0.69
+pyrogram==1.4.8
 tgcrypto
 requests
+aiofiles
+ffmpeg-python
+asyncio
+aiohttp
+beautifulsoup4
+hachoir
+numpy
+Pillow
+olefile
+filetype
+motor
+https://github.com/Tinche/aiofiles/archive/master.zip
+dnspython
+psutil
+ffmpeg-python
